<resources>
    <string name="app_name">eLegion</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_enter">Войти</string>
    <string name="login_register">Зарегистрироваться</string>
    <string name="login_input_error">Ошибка ввода данных</string>
    <string name="profile_password">Пароль</string>
    <string name="profile_email">Email</string>
    <string name="writePasswordAgain_hint">Введите пароль еще раз</string>
    <string name="writePassword_hint">Введите пароль</string>
    <string name="registration_input_success">Регистрация пройдена успешно</string>
    <string name="registration_input_error">Login уже занят</string>
    <string name="login_error">Ошибка логина. Неверный логин или пароль.</string>
    <string name="logout">Logout</string>
    <string name="profile_name">Имя</string>
    <string name="request_error">Request error</string>
    <string name="registration_error">Registration error</string>
    <string name="registration_success">Registration success</string>
    <string name="albums">Альбомы</string>
</resources>
